# SmartInbox

./: .env.example  .gitignore  README.md  REVIEW.md  config.example.yaml  pyproject.toml
deploy/: smartinbox.service
scripts/: check-no-secrets.sh  install-proton-bridge.sh  install-service.sh  proton-bridge-login.sh
smartinbox/: __init__.py  calendar_body.py  calendar_datefinder.py  calendar_events.py  calendar_extract.py  calendar_ics.py  chatterbox_models.py  chatterbox_tts.py  cli.py  company_lookup.py  config.py  core.py  db.py  delivery_modes.py  demo_data.py  email_middleman.py  email_search.py  email_spam.py  email_summary.py  gmail_fetch.py  gmail_imap.py  gmail_oauth.py  imap_mail.py  important_senders.py  mail_source_url.py  ollama_options.py  prompt_storage.py  sender_interest.py  storage_stats.py  tts_recording_cache.py  voice_summary.py
smartinbox/web/: server.py
smartinbox/web/static/css/: styles.css  summary-themes.css
smartinbox/web/static/js/: activity-log-resize.js  alerts.js  app.js  calendar.js  llm.js  markdown.js  phrases.js  process.js  search.js  senders.js  (+2 more)
smartinbox/web/templates/: calendar.html  index.html  llm.html  phrases.html  pipelines.html  process.html  search.html  senders.html  settings.html  storage.html
tests/: test_calendar_body.py  test_calendar_datefinder.py  test_calendar_events.py  test_calendar_extract.py  test_company_lookup.py  test_delivery_modes.py  test_email_middleman.py  test_email_pipeline.py  test_email_spam.py  test_mail_source_url.py  test_ollama_options.py  test_self_heal.py  test_tts_recording_cache.py
