[project]
name = "smartinbox"
version = "0.1.0"
description = "Gmail inbox monitor with Ollama summaries and Chatterbox voice alerts"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "datagod"}]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "jinja2>=3.1.0",
  "pyyaml>=6.0",
  "python-dotenv>=1.0.0",
  "google-auth>=2.29.0",
  "google-auth-oauthlib>=1.2.0",
  "google-api-python-client>=2.130.0",
]

[project.scripts]
smartinbox = "smartinbox.cli:main"

[project.urls]
Homepage = "https://github.com/datagod/SmartInbox"
Repository = "https://github.com/datagod/SmartInbox"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["smartinbox"]